2009-11-27  David Bateman  <dbateman@free.fr>

	* doc/interpreter/contributors.in: Add Kacper Kowalik.

2009-11-27  David Bateman  <dbateman@free.fr>

	* interpreter/install.txi: Document that curl libraries impact ftp
	objects.
	* interpreter/system.txi: Document the ftp objects

2009-11-25  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am:
	Simplify doc-cache handling in Makefile.am to use only install-data-local
	target

2009-11-24  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.am:
	Correct Makefile so that it halts on error when unable to build doc-cache

2009-11-23  Rik <octave@nomad.inbox5.com>

	* faq/Makefile.am, interpreter/Makefile.am, liboctave/Makefile.am:
	Stop distribution of conf.texi by autotools.  conf.texi must be re-made
	from conf.texi.in during configure step

2009-11-23  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Add . to SUBDIRS to force automake to compile this
	directory, and make conf.texi, before recursively compiling SUBDIRS which
	depend on conf.texi

2009-11-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Add DISTCLEANFILES macro so that generated conf.texi can be 
	cleaned by automake.

2009-11-10  John W. Eaton  <jwe@octave.org>

	* Makefile.am, faq/Makefile.am, interpreter/Makefile.am,
	liboctave/Makefile.am, refcard/Makefile.am,
	interpreter/config-images.sh, interpreter/images,
	interpreter/images.awk: New files.
	* Makefile.in, faq/Makefile.in, interpreter/Makefile.in,
	liboctave/Makefile.in, refcard/Makefile.in: Delete.
	* interpreter/munge-texi.cc (main, usage): Eliminate unnecessary
	-d option.
	* liboctave/liboctave.texi: Surround @direntry in appropriate magic.
	* faq/OctaveFAQ.texi: Rename from faq/Octave-FAQ.texi.

2009-10-23  Rik <octave@nomad.inbox5.com>

	* various: Periodic grammar check of Octave documentation files to ensure
	a standardized format.

2009-10-20  Rik <octave@nomad.inbox5.com>

	* interpreter/Makefile.in: Clean Makefile.in and remove a few
	non-functional targets
