@@ -1,3 +1,14 @@
+2009-11-30  John W. Eaton  <jwe@octave.org>
+
+	* interpreter/Makefile.a (nodist_octave_TEXINFOS): Add
+	contributors.texi and $(MUNGED_TEXI_SRC) to the list.
+	(dist_octave_TEXINFOS): Delete.
+	(DISTCLEANFILES, all_octave_TEXINFOS): New variables.
+	($(srcdir)/octave.info, octave.dvi, octave.pdf,	octave.html):
+	Depend on $(all_octave_TEXINFOS), not $(octave_TEXINFOS).
+	(octave.ps): Depend on .dvi file and EPS files, but not .texi
+	source files.
+
 2009-11-27  David Bateman  <dbateman@free.fr>
 
 	* doc/interpreter/contributors.in: Add Kacper Kowalik.
